...
    <string name="gear_stat_rectangle_body_select_grid">Select the area where most of your catch was caught.</string>
    <string name="gear_stat_rectangle_body_other_hint">If it is not listed, select Other to enter it.</string>
    <string name="gear_stat_rectangle_body_select_other">Select the area where most of your catch was caught. If it is not listed, select Other to enter it.</string>
    <string name="gear_stat_rectangle_other_option">Other</string>
    <string name="gear_stat_rectangle_autocomplete_label">Type to search (minimum 2 characters)</string>
    <string name="gear_stat_rectangle_no_matches_found">No matching statistical sub-rectangles found</string>
    <string name="gear_stat_rectangle_error_required">Select a statistical subrectangle</string>
    <string name="gear_stat_rectangle_error_format">Enter a statistical subrectangle in the correct format, for example 38E84</string>
    <string name="gear_stat_rectangle_selected_area">Selected area: %1$s</string>
    <string name="gear_stat_rectangle_selected_area_none">No area selected</string>
    <string name="gear_stat_rectangle_map_unavailable">The map could not be loaded. Select Other to choose a statistical sub-rectangle from a list instead.</string>
    <string name="gear_stat_rectangle_map_content_description">Map of fisheries statistical sub-rectangles near your departure port. %1$s Drag to pan and pinch to zoom. Select Other for a list you can search without using the map.</string>
    <string name="gear_stat_rectangle_map_choose_from_list_action">Choose a statistical sub-area from a list</string>
    <string name="gear_species_search_title">Which species did you catch with %1$s?</string>
    <string name="gear_species_search_title_fallback">Which species did you catch?</string>
    <string name="gear_species_search_autocomplete_label">Type to search (minimum 2 characters)</string>
    <string name="gear_species_search_no_matches_found">No matching species found</string>
    <string name="gear_species_search_error_empty">Enter the species you want to add</string>
    <string name="gear_species_search_error_no_selection">Select a species to add</string>
...
